2023-02-17T11:26:50.123Z |      1.0.0 | First version from old package `m-utilities`