@@ -1,1 +1,2 @@
 2023-02-17T11:26:50.123Z |      1.0.0 | First version from old package `m-utilities`
+2023-07-24T12:34:30.597Z |            1.1.0 | added _bs-forms.scss
